# unitexpr

./: .gitignore  CHANGELOG.md  Makefile  README.md  README_PYPI.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: test.yml
benchmarks/: README.md  qarray_benchmark.py  quantity_benchmark.py  test_compare.py  test_sum.py  unit_array_benchmark.py  unit_benchmark.py
example/: example.py  qarray_example.py  quantity_example.py
src/unitexpr/: __init__.py  _unitexpr.py  decorators.py  errors.py  qarray.py  quantity.py  sc_units.py  si_units.py  unit.py  unit_array.py  unit_dict.py  unit_symbol.py
tests/: test_qarray.py  test_quantity.py  test_unit.py  test_unit_array.py  test_unit_dict.py  test_unit_expr.py  test_unit_symbol.py
