[metadata]
name = unitexpr
version = 0.0.1
author = D Reschner
author_email = git@simphotonics.com
description = Units, unit expressions, and united arrays.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/simphotonics/unitexpr
project_urls =
    Bug Tracker = https://github.com/simphotonics/unitexpr/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src