[metadata]
name = unitexpr
version = 0.1.3
author = D Reschner
author_email = git@simphotonics.com
description = Units, unit expressions, and united arrays.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/simphotonics/unitexpr
project_urls =
    Bug Tracker = https://github.com/simphotonics/unitexpr/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    lockattrs

[options.packages.find]
where = src

[flake8]
per-file-ignores = __init__.py:F401
